🔨 chore : 자잘한 초기세팅들 & header block component 생성
- directory 세팅
- navigate 세팅
- constant 세팅
- header block component 생성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,21 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"],
+      "@constants": ["constants"],
+      "@types": ["types"],
+      "@state": ["state"],
+      "@assets/*": ["../assets/*"]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
