--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-color-palette": "^2.2.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-safe-area-context": "3.3.2",
