🐛 fix : 자잘한 에러들 수정
- 경로에러
- date string format을 iso format으로 변경, 그에 맞춰서 컴포넌트들 에러 대응

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@constants": ["constants"],
       "@types": ["types"],
       "@state": ["state"],
+      "@Utils": ["Utils"],
       "@assets/*": ["../assets/*"]
     }
   },
