--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
