🔨 chore : firebase 세팅
- firebase 세팅
- dotenv 세팅
- firebase auth, pictureDiary 관련 class 세팅

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@types": ["types"],
       "@state": ["state"],
       "@Utils": ["Utils"],
-      "@assets/*": ["../assets/*"]
+      "@assets/*": ["../assets/*"],
+      "@env": [".env"],
+      "@service/*": ["service/*"]
     }
   },
   "exclude": [
