--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.0.11",
     "@types/styled-components": "^5.1.18",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~43.0.2",
@@ -41,6 +42,7 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-modal-datetime-picker": "^13.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
