--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-facebook": "~12.0.3",
     "expo-font": "~10.0.3",
     "expo-linking": "~2.4.2",
+    "expo-media-library": "~13.0.3",
     "expo-random": "~12.0.1",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
@@ -48,6 +49,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-signature-canvas": "^4.3.0",
     "react-native-svg": "12.1.1",
+    "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
     "recoil": "^0.5.2",
