--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Allow $(PRODUCT_NAME) to access your photos.",
         "NSPhotoLibraryAddUsageDescription": "Allow $(PRODUCT_NAME) to save photos."
-      }
+      },
+      "bundleIdentifier": "com.kunwookwon.TodaysPictureDiary"
     },
     "android": {
       "adaptiveIcon": {
