--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll"
@@ -53,7 +52,9 @@
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
     "recoil": "^0.5.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-updates": "~0.10.13",
+    "react-native-reanimated": "~2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -63,5 +64,7 @@
     "jest-expo": "~43.0.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "name": "TodaysPictureDiary",
+  "version": "1.0.0"
 }
