--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.11",
@@ -32,6 +33,7 @@
     "expo-random": "~12.0.1",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
     "expo-web-browser": "~10.0.3",
     "firebase": "^9.6.1",
     "lottie-react-native": "4.0.3",
@@ -44,17 +46,18 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-paper": "^4.11.1",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-signature-canvas": "https://github.com/Kwonkunkun/react-native-signature-canvas.git",
     "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-view-shot": "3.1.2",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
     "recoil": "^0.5.2",
-    "styled-components": "^5.3.3",
-    "expo-updates": "~0.10.13",
-    "react-native-reanimated": "~2.2.0"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
