💄 style : user page style 추가
- user page style 추가
- 하단 탭바가 생김으로서 바뀌는 디자인 수정

--- a/ios/TodaysPictureDiary/Info.plist
+++ b/ios/TodaysPictureDiary/Info.plist
@@ -25,10 +25,19 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>myapp</string>
 				<string>com.kunwookwon.TodaysPictureDiary</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.547478500439-4pcmvragq1hf1r5ue1j377lhcskqr8r0</string>
 			</array>
 		</dict>
 	</array>
