--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+
+# individual
 .env
+GoogleService-Info.plist
+google-services.json
 
 # macOS
 .DS_Store
