--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-firebase/app": "^14.2.2",
     "@react-native-firebase/auth": "^14.2.2",
+    "@react-native-firebase/firestore": "^14.2.2",
+    "@react-native-firebase/storage": "^14.2.2",
     "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
