--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,8 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+MYAPP_RELEASE_STORE_FILE=TodaysPictureDiary.keystore
+MYAPP_RELEASE_KEY_ALIAS=TodaysPictureDiary
+MYAPP_RELEASE_STORE_PASSWORD=rjsdndls502
+MYAPP_RELEASE_KEY_PASSWORD=rjsdndls502
